<resources>
    <string name="app_name">My Movies</string>
    <string name="poster_of_movie">Poster of movie</string>
    <string name="popularity">Most Popular Movies</string>
    <string name="top_rated">Top Rated Movies</string>
    <string name="title">Title</string>
    <string name="original_title">Original Title</string>
    <string name="rating">Rating</string>
    <string name="release_date">Release date</string>
    <string name="description">Description</string>
    <string name="big_poster">Big poster</string>
    <string name="add_to_favorite">Add to favorite</string>
    <string name="remove_from_favorite">remove from favorite</string>
    <string name="item_main">Main</string>
    <string name="item_favorite">Favorite</string>
    <string name="play_trailer">Play Trailer</string>
    <string name="add_to_favourite">Add to favourite</string>
</resources>
