<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <android.support.constraint.Guideline
        android:id="@+id/guidelineCenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.4" />

    <TextView
        android:id="@+id/textViewLabelTitle"
        style="@style/LabelStyle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/title"/>

    <TextView
        android:id="@+id/textViewTitle"
        style="@style/TextStyle"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guidelineCenter"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view1"
        style="@style/BorderStyle"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/textViewLabelOriginalTitle"
        style="@style/LabelStyle"
        app:layout_constraintTop_toBottomOf="@+id/view1"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/original_title"/>

    <TextView
        android:id="@+id/textViewOriginalTitle"
        style="@style/TextStyle"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guidelineCenter"
        app:layout_constraintTop_toBottomOf="@+id/view1" />

    <View
        android:id="@+id/view2"
        style="@style/BorderStyle"
        app:layout_constraintTop_toBottomOf="@+id/textViewOriginalTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/textViewLabelRating"
        style="@style/LabelStyle"
        app:layout_constraintTop_toBottomOf="@+id/view2"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/rating"/>

    <TextView
        android:id="@+id/textViewRating"
        style="@style/TextStyle"
        app:layout_constraintTop_toBottomOf="@+id/view2"
        app:layout_constraintStart_toStartOf="@+id/guidelineCenter"/>

    <View
        style="@style/BorderStyle"
        android:id="@+id/view3"
        app:layout_constraintTop_toBottomOf="@+id/textViewRating"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/textViewLabelReleaseDate"
        style="@style/LabelStyle"
        app:layout_constraintTop_toBottomOf="@+id/view3"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/release_date"/>

    <TextView
        android:id="@+id/textViewReleaseDate"
        style="@style/TextStyle"
        app:layout_constraintTop_toBottomOf="@+id/view3"
        app:layout_constraintStart_toStartOf="@+id/guidelineCenter"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:id="@+id/view4"
        style="@style/BorderStyle"
        app:layout_constraintTop_toBottomOf="@+id/textViewReleaseDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/textViewLabelDescription"
        style="@style/LabelStyle"
        app:layout_constraintTop_toBottomOf="@+id/view4"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/description"/>

    <TextView
        android:id="@+id/textViewOverview"
        style="@style/TextStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLabelDescription"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerViewTrailers"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/textViewOverview"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:nestedScrollingEnabled="false"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerViewReviews"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/recyclerViewTrailers"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:nestedScrollingEnabled="false"/>

</android.support.constraint.ConstraintLayout>